What's new?
===========

Prototype 5.3
-------------

Released: Mar. 30, 2012

- This is the first release available for Mac OS X.
- Repel disc changes:
   - Don't remove anchoring anymore.
   - Stop enemy CAT before pushing it.
   - Ignore enemy CAT's anchoring when pushing.
- Mine Launcher changes:
   - Bubbles don't bounce anymore.
   - Increase proximity radius from 5 to 6.
- Early version of new map (Archipelago)
- Bugfixes


Prototype 5.2
-------------

Released: Feb. 15, 2012

- Standard blaster now uses projectiles instead of hitscan.
- New grenade: Bypasses shield but does much less damage.
- An exploding mine can now lead to a disc-lock.
- Mutators for ROTC: Ethernet:
   - Slowpoke: Makes the game slow.
   - Superblaster: Replaces standard blaster with powerful hitscan version.
- On "death", display info on what caused your CATs destruction.
- Per default, HUD colors now indicate player condition instead of team.
- MOTD (Message Of The Day) feature.
- Make damage flash more visible.
- Force waiting period after using the "Ask for a game!" 
  button in the global player chat.
- Bugfixes & other minor improvements


Prototype 5.1
-------------

Released: Jan. 4, 2012

- New (albeit very simple) map.
- Increased recoil of Blaster and Battle Rifle.
- Bugfixes & other minor improvements


Prototype 5-testing
-------------------

Released: Dec. 16, 2011

- Support for Infantry arenas.
- Fixed zone mechanics and demo recording.
- Improved UI (both functionally and visually).
- Changed default key-bindings: "t" for chat, "shift t" for team chat.
- New disc: Explosive Disc
- New way to configure loadout: Hotkeys load a pre-configured loadout
  and only the first slot can be exchanged on-the-fly.
- New menus: "Edit Loadouts", "Switch Team" and "Arena Admin".
- B.O.U.N.C.E. has been moved from the red/blue into the orange/green
  weapon category. To compensate for bypassing the shield, its damage
  has been reduced.