@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.5.3+dev";
+$GameVersionString = "p.5.3+dev1";
 
 //------------------------------------------------------------------------------
 
